# auth_service

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
sql-scripts/: create_tables.sql
src/: main.py
src/auth_service/: config.py
src/auth_service/adapters/: email_gateway.py  endpoints.py  otp_store.py  store.py  user_store.py
src/auth_service/adapters/email/: email_gateway.py
src/auth_service/adapters/http/: endpoints.py
src/auth_service/adapters/http/routers/: login.py  schemas.py  users.py
src/auth_service/adapters/repositories/: models.py  repos.py
src/auth_service/controller/: __init__.py
src/auth_service/dependencies/: __init__.py  controller.py  email.py  repositories.py
src/auth_service/entities/: __init__.py  gateway.py  otp.py  store.py  user.py
src/auth_service/gateway/: __init__.py
src/auth_service/usecases/: __init__.py  create_user.py  login_user.py  otp_login.py
tests/: conftest.py  factories.py
tests/adapters/: test_endpoints.py  test_otp_store.py  test_user_store.py
tests/controller/: conftest.py  test_create_user.py  test_login_user.py  test_otp_login.py
tests/entities/: test_otp.py  test_user.py
tests/usecases/: conftest.py  test_create_user.py  test_login_user.py  test_otp_login.py
